<resources>

    <string name="app_name">我的账本</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">我的账本</string>
    <string name="tv_incoming">收入</string>
    <string name="tv_outgoing">支出</string>
    <string name="tv_Rincoming">收:</string>
    <string name="tv_Routgoing">支:</string>
    <string name="tv_total">合:</string>
    <string name="tv_theBalance">余额</string>
    <string name="tv_newIO">新增收支</string>
    <string name="tv_modifyIO">编辑收支</string>
    <string name="tv_payout">消费</string>
    
    <string name="tv_payouted">已经消费</string>
    <string name="tv_settingbudget">设置预算</string>
    <string name="tv_BMoney">预算金额*</string>
    <string name="tv_BPurpose">支出用途*</string>
    <string name="tv_BStartTime">开始时间</string>
    <string name="tv_BEndTime">结束时间</string>
    
    <string name="btn_add">记一笔</string>
    <string name="btn_addAgain">再记一笔</string>
    <string name="btn_records">流水</string>
    <string name="btn_exit">退出</string>
    <string name="btn_return">返回</string>
    <string name="btn_sure">确定</string>
    <string name="btn_save">保存</string>
    <string name="btn_delete">删除</string>
    <string name="btn_register">注册</string>
    <string name="btn_Nowregister">确认注册</string>
    <string name="btn_synchro">同步</string>
    <string name="btn_login">登     录</string>
    <string name="btn_addBudget">添加预算</string>
    
    <string name="tv_purpose">用途</string>
    <string name="tv_type">类型</string>
    <string name="tv_date">日期</string>
    <string name="tv_money">金额</string>
    <string name="tv_note">备注</string>
    <string name="et_initial">0</string>
    <string name="tv_canyin">餐饮</string>
    <string name="tv_jiaotong">交通</string>
    <string name="tv_gouwu">购物</string>
    <string name="tv_yule">娱乐</string>
    <string name="tv_yijiao">医教</string>
    <string name="tv_jujia">居家</string>
    <string name="tv_jiaqi">假期</string>
    <string name="tv_qita">其他</string>
    <string name="tv_pleaseSelect">请选择</string>
    <string name="tv_login">登录通行证</string>
    <string name="tv_register">注册通行证</string>
    <string name="tv_ID">帐        号</string>
    <string name="tv_passWord">密        码</string>
    
    <string name="tv_cifpassWord">确认密码</string>

    <color name="red">#ffff0000</color>
    <color name="green">#ff00ff00</color>
    <color name="blue">#ff0000ff</color>
    <color name="blank">#ff000000</color>
    <color name="white">#ffffffff</color>
    <color name="gray">#FFBEBEBE</color>

    <string name="expenses">支出金额</string>
    <string name="account">账户</string>
    <string name="use">用途</string>
    <string name="people">人员</string>
    <string name="date">日期</string>

</resources>